--- a/JavaFXUI1/.classpath
+++ b/JavaFXUI1/.classpath
@@ -35,13 +35,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/adm/Downloads/javafx-sdk-15.0.1/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="C:/Users/adm/Downloads/javafx-sdk-15.0.1/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="C:/Users/adm/Downloads/javafx-sdk-15.0.1/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="C:/Users/adm/Downloads/javafx-sdk-15.0.1/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="C:/Users/adm/Downloads/javafx-sdk-15.0.1/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="C:/Users/adm/Downloads/javafx-sdk-15.0.1/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="C:/Users/adm/Downloads/javafx-sdk-15.0.1/lib/javafx.web.jar"/>
-	<classpathentry kind="lib" path="C:/Users/adm/Downloads/javafx-sdk-15.0.1/lib/javafx-swt.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAFX_LIBS"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
